# binary_reader

./: .gitignore  CMakeLists.txt  README.md  main_test.cpp
src/: CMakeLists.txt  binary_reader.h  systemFileManip.cpp  systemFileManip.h
test/: format.xpl  genfile.f90
